--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         <a class="link1" href="team.html">The team</a>  
          
           <a class="link1" href="sustainability.html">sustainability</a> 
-          <a class="link1" href="funds.html">angels</a>
+          <a class="link1" href="angels.html">angels</a>
           <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link" class="link1"> startup application</a>
            <a href="lp.html"  class="link1">lp's login</a>
-          <a class="lin1 kbutton-nav" href="">Contact \[xs</a>
+           <span> Contact Us</span>
+          <a href="mailto:omo@omo.vc" class="mail-link">omo@omo.vc</a>
         </div>
       </div>
 
@@ -128,7 +129,7 @@
     <section class="fourth">
     <h1> <i>why</i> <br>omo ventures ?</h1>
       <p>We are the first partner to exceptional teams. We provide a comprehensive ecosystem that nurtures and guides founders throughout their journey from inception through to exit.We actively contribute operational funding, hands-on talent, and global growth initiatives to propel our companies toward success. </p>  
-      <a href="#">learn more</a>
+      <a href="https://www.linkedin.com/company/omo-ventures/">learn more</a>
 
     </section>
    
@@ -151,14 +152,22 @@
 
   <a href="">contact</a>
 </div>
-<div>
+
+
+
+
+<div class="location">
+  <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368"><path d="M480.21-480Q510-480 531-501.21t21-51Q552-582 530.79-603t-51-21Q450-624 429-602.79t-21 51Q408-522 429.21-501t51 21ZM480-191q119-107 179.5-197T720-549q0-105-68.5-174T480-792q-103 0-171.5 69T240-549q0 71 60.5 161T480-191Zm0 95Q323.03-227.11 245.51-339.55 168-452 168-549q0-134 89-224.5T479.5-864q133.5 0 223 90.5T792-549q0 97-77 209T480-96Zm0-456Z"/></svg>
   <h4>
     contact us 
   </h4>
   <p>
     Babatope <br> Bejide Crescent <br>| Lekki Phase 1 <br> | Lagos
   </p>
-  <a href="mailto:omo@omovc.com">omo@omovc.com</a>
+  <a href="mailto:omo@omovc.com" class
+  style="text-decoration: underline;"> omo@omovc.com</a>
+
+
 </div>
 </div>
 
@@ -170,11 +179,11 @@
   VENTURES</h1>
 </div>
 
- <p class="linkedin-text">follow us____ <a href=""><i class="fa-brands fa-linkedin-in" style="color: blue;"></i></a></p>
+ <p class="linkedin-text">follow us____ <a href="https://www.linkedin.com/company/omo-ventures/"><i class="fa-brands fa-linkedin-in" style="color: blue;"></i></a></p>
 
  <a href="lp.html" class="patner-login"> patner-login</a>
  <br class="linebreak">
- <p class="linebreak">Copyright &copy; <a href="#home" style="text-decoration: none;">omo.vc</a> - All rights reserved
+ <p class="linebreak">Copyright &copy; <a href="mailto:omo@omo.vc" ;>omo.vc</a> - All rights reserved
  </p>
 
     </footer>
