--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         We aim to do this in a way that makes our  portfolio companies  and partners proud , bridging the gap between societal, environmental, and technological innovation as we build a unique global investment platform.
       </p>
 
-      <a href="studios.html#invest">learn more</a>
+      <a href="ventures.html">learn more</a>
 
       
     </section>
@@ -129,7 +129,7 @@
     <section class="fourth">
     <h1> <i>why</i> <br>omo ventures ?</h1>
       <p>We are the first partner to exceptional teams. We provide a comprehensive ecosystem that nurtures and guides founders throughout their journey from inception through to exit.We actively contribute operational funding, hands-on talent, and global growth initiatives to propel our companies toward success. </p>  
-      <a href="https://www.linkedin.com/company/omo-ventures/">learn more</a>
+      <a href="studios.html">learn more</a>
 
     </section>
    
@@ -188,6 +188,7 @@
 
     </footer>
 
+    <script src="script.js"></script>
 
   </body>
 </html>
