--- a/index.html
+++ b/index.html
@@ -135,9 +135,7 @@
    
 
 
-
-
-    <footer>
+<footer>
 
       <div  class="links-contacts">
 <div class="footer-nav">
@@ -147,23 +145,26 @@
   <a href="ventures.html">omo venture</a>
    <a href="team.html">the team</a>
   <a href="sustainability.html">sustainability</a>
-  <a href="funds.html"> omo funds</a>
-  <a href="startup.html"> omo startups</a>
-
-  <a href="">contact</a>
+  <a href="angels.html">angels</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link"> 
+         <a href="lp.html"  class="">lp's login</a>
 </div>
 
 
 
 
 <div class="location">
-  <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368"><path d="M480.21-480Q510-480 531-501.21t21-51Q552-582 530.79-603t-51-21Q450-624 429-602.79t-21 51Q408-522 429.21-501t51 21ZM480-191q119-107 179.5-197T720-549q0-105-68.5-174T480-792q-103 0-171.5 69T240-549q0 71 60.5 161T480-191Zm0 95Q323.03-227.11 245.51-339.55 168-452 168-549q0-134 89-224.5T479.5-864q133.5 0 223 90.5T792-549q0 97-77 209T480-96Zm0-456Z"/></svg>
   <h4>
     contact us 
   </h4>
-  <p>
+
+
+
+
+  <p>    
     Babatope <br> Bejide Crescent <br>| Lekki Phase 1 <br> | Lagos
-  </p>
+   </p>
+   
   <a href="mailto:omo@omovc.com" class
   style="text-decoration: underline;"> omo@omovc.com</a>
 
@@ -187,6 +188,8 @@
  </p>
 
     </footer>
+
+
 
     <script src="script.js"></script>
 
