--- a/team.html
+++ b/team.html
@@ -84,57 +84,60 @@ We’re a <i>unique</i> group of professionals driven by our desire to empower h
 </main>
 
  
-
 <footer>
 
-  <div  class="links-contacts">
+      <div  class="links-contacts">
 <div class="footer-nav">
-<h4>quick links</h4>
-<a href="index.html" > home</a> 
-<a href="studios.html">omo studio</a>
-<a href="ventures.html">omo venture</a>
-<a href="team.html">the team</a>
-<a href="sustainability.html">sustainability</a>
-<a href="funds.html"> omo funds</a>
-<a href="startup.html"> omo startups</a>
-
-<a href="">contact</a>
+  <h4>quick links</h4>
+  <a href="index.html" > home</a> 
+  <a href="studios.html">omo studio</a>
+  <a href="ventures.html">omo venture</a>
+   <a href="team.html">the team</a>
+  <a href="sustainability.html">sustainability</a>
+  <a href="angels.html">angels</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link"> 
+         <a href="lp.html"  class="">lp's login</a>
 </div>
 
 
 
 
 <div class="location">
-<svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368"><path d="M480.21-480Q510-480 531-501.21t21-51Q552-582 530.79-603t-51-21Q450-624 429-602.79t-21 51Q408-522 429.21-501t51 21ZM480-191q119-107 179.5-197T720-549q0-105-68.5-174T480-792q-103 0-171.5 69T240-549q0 71 60.5 161T480-191Zm0 95Q323.03-227.11 245.51-339.55 168-452 168-549q0-134 89-224.5T479.5-864q133.5 0 223 90.5T792-549q0 97-77 209T480-96Zm0-456Z"/></svg>
-<h4>
-contact us 
-</h4>
-<p>
-Babatope <br> Bejide Crescent <br>| Lekki Phase 1 <br> | Lagos
-</p>
-<a href="mailto:omo@omovc.com" class
-style="text-decoration: underline;"> omo@omovc.com</a>
+  <h4>
+    contact us 
+  </h4>
+
+
+
+
+  <p>    
+    Babatope <br> Bejide Crescent <br>| Lekki Phase 1 <br> | Lagos
+   </p>
+   
+  <a href="mailto:omo@omovc.com" class
+  style="text-decoration: underline;"> omo@omovc.com</a>
 
 
 </div>
 </div>
 
 <div class="text">
-<h1>
-OMO
-</h1>
-<h1>
-VENTURES</h1>
+  <h1>
+    OMO
+  </h1>
+  <h1>
+  VENTURES</h1>
 </div>
 
-<p class="linkedin-text">follow us____ <a href="https://www.linkedin.com/company/omo-ventures/"><i class="fa-brands fa-linkedin-in" style="color: blue;"></i></a></p>
+ <p class="linkedin-text">follow us____ <a href="https://www.linkedin.com/company/omo-ventures/"><i class="fa-brands fa-linkedin-in" style="color: blue;"></i></a></p>
 
-<a href="lp.html" class="patner-login"> patner-login</a>
-<br class="linebreak">
-<p class="linebreak">Copyright &copy; <a href="mailto:omo@omo.vc" ;>omo.vc</a> - All rights reserved
-</p>
+ <a href="lp.html" class="patner-login"> patner-login</a>
+ <br class="linebreak">
+ <p class="linebreak">Copyright &copy; <a href="mailto:omo@omo.vc" ;>omo.vc</a> - All rights reserved
+ </p>
 
-</footer>
+    </footer>
+
 
     
 </body>
