--- a/startup.html
+++ b/startup.html
@@ -119,7 +119,7 @@
    <a href="team.html">the team</a>
   <a href="sustainability.html">sustainability</a>
   <a href="angels.html">angels</a>
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link"> 
+   <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link">omo startups</a>
          <a href="lp.html"  class="">lp's login</a>
 </div>
 
