--- a/studios.html
+++ b/studios.html
@@ -158,7 +158,7 @@ We provide capital to the business and support with follow-on funding and introd
  <h1><i>Startup founder?</i>Are you ready?
   
   </h1> 
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link">
+   <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link">omo startups</a>
   Come work with us</a>
 
 </div>
