--- a/ventures.html
+++ b/ventures.html
@@ -199,7 +199,7 @@ We are sector-agnostic investors, having backed businesses across a wide range o
    <a href="team.html">the team</a>
   <a href="sustainability.html">sustainability</a>
   <a href="angels.html">angels</a>
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link"> 
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScmF9xVcwum5VV7Jcv-fTNV5gpkkmK2IJ-3rxBkwXyu3S7SwQ/viewform?usp=sf_link">omo startups</a> 
          <a href="lp.html"  class="">lp's login</a>
 </div>
 
